# Generative-AI-

./: .gitignore  README.md  pyproject.toml  requirements.txt
Chat SQL/: app.py  sqlite.py  student.db
Chatbot using Langchain/: 1. Chatbot.ipynb  2. Vectorstores and Retrievers.ipynb
Conversation Q&A/: Conversation Q&A.ipynb
Fine Tuning/: Lora_Tuning.ipynb
GraphDB with Langchain/: experiments.ipynb  promptstrategies.ipynb
Hybrid Search/: Hybrid Search.ipynb
LCEL GenAI App/: 1. Simple LCEL.ipynb  serve.py
Langchain/: 1. Introduction.ipynb  11. ChromaVectorStore.ipynb  2. DataIngestion.ipynb  5. HTMLtextSplitter.ipynb  6. RecursiveJSONsplitter.ipynb  7. EmbeddingOpenAI.ipynb
Langchain Prerequities/: 1. Introduction.ipynb  10. FiassVectorStore.ipynb  11. ChromaVectorStore.ipynb  3. RecursiveCharacterTextSplitter.ipynb  4. CharacterTextSplitter.ipynb  8. EmbeddingOLLAMA.ipynb  9. HuggingFaceEmbeddings.ipynb
Langchain Prerequities/Chroma_DB/: chroma.sqlite3
Langchain Prerequities/FAISS_index/: index.faiss  index.pkl
Langchain x Huggingface/: experiments.ipynb
Langchain/FAISS_index/: index.faiss  index.pkl
PDF Query RAG using Langchain/: PDF_query Langchain.ipynb
Q&A Chatbot/Using Gemini/: app.py
Q&A Chatbot/Using Groq/: app.py
RAG Document Q&A/: app.py
Simple GenAI Application/: 1. Getting Started.ipynb  2. SimpleApp.ipynb  app.py
Text Summarization/: Text Summarization.ipynb  app.py
Tools and Agents/: Tools_agent.ipynb  app.py
