[project]
name = "generative-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=3.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.11.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "langchain-text-splitters>=1.1.2",
    "langserve>=0.3.3",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "sse-starlette>=3.3.4",
    "streamlit>=1.56.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
    "wikipedia>=1.4.0",
]
